Remove code fold.

--- a/tic_memo.qmd
+++ b/tic_memo.qmd
@@ -3,7 +3,7 @@ title: "TIC分析機器のメモ"
 format: 
   html:
     html-math-method: katex
-    code-fold: true
+    code-fold: false
     df-print: paged
 reference-location: margin
 citation-location: margin
